# epiccv-backend-ai

./: .gitignore  README.md  main.py  pyproject.toml
TestExample/: cv1.txt  jd1.txt
app/: main.py
app/api/: endpoints.py
app/core/: config.py  llm.py
app/prompts/: analysis_prompt1.yaml  analysis_prompt2.yaml  extract_cv_prompt1.yaml  extract_cv_prompt2.yaml  extract_jd_prompt1.yaml  extract_jd_prompt2.yaml  gen_roadmap1.yaml  gen_roadmap2.yaml
app/schemas/: cv.py  jd.py  prompt_schema.py  result.py  roadmap.py  shared.py
app/services/: ai_check.py  analysis_service.py  cv_service.py  jd_service.py  roadmap_service.py
test/: evaluate_prompts.py
